<resources>
    <string name="app_name">LakeCircle</string>

    <string name="login">登  录</string>
    <string name="logup">注册</string>
    <string name="forget_password">忘记密码</string>
    <string name="psw">密码</string>
    <string name="account">账号</string>
    <string name="confirm_pwd">确认密码</string>
    <string name="pwdquestion">密报问题</string>

    <string name="home">首页</string>
    <string name="journey">行程</string>
    <string name="lakecircle">河湖圈</string>
    <string name="mine">我的</string>

    <!--首页-->
    <string name="wuhan">武汉</string>
    <string name="problem_upload">问题上传</string>
    <string name="activity_detail">活动详情</string>
    <string name="merchant">附近商家</string>
    <string name="time_lake">实时河湖</string>
    <string name="travel">河湖旅游</string>
    <string name="lake_walk">河湖行</string>
    <string name="light_lake">点亮河湖</string>

    <string name="up_load_picture">上传照片</string>
    <string name="question_content">问题内容</string>
    <string name="pick_from_album">从相册选择</string>
    <string name="dismiss">取消</string>
    <string name="light_circle">点亮河湖</string>
    <string name="ranking">排行榜</string>
    <string name="shahu">沙湖</string>
    <string name="light_rank">点亮河湖排行榜</string>
    <string name="user_rank">用户排行榜</string>
    <string name="lake_rank">河湖排行榜</string>
    <string name="lighted">被点亮</string>
    <string name="times">次</string>
    <string name="submit">提交</string>

    <string-array name="pwd_question">
        <item>请选择密保问题：</item>
        <item>父亲的名字</item>
        <item>母亲的名字</item>
        <item>我的名字</item>

    </string-array>

    <!--我的-->
    <string name="mer_cer">商家认证</string>
    <string name="govern_cer">政府认证</string>
    <string name="govern_entrance">河湖长入口</string>
    <string name="mer_entrance">商家入口</string>
    <string name="my_coupon">我的优惠劵</string>
    <string name="contact_us">联系我们</string>
    <string name="logoff">退出登录</string>

    <string name="coupon_amount">%1$d元</string>

    <!--我的：认证-->
    <string name="mine_cer">申请认证</string>
    <string name="govern_cer_q1">负责河段（湖）</string>
    <string name="govern_cer_a1">请输入河湖名称</string>
    <string name="govern_cer_q2">河湖长姓名</string>
    <string name="govern_cer_a2">请输入姓名</string>
    <string name="govern_cer_q3">联系方式</string>
    <string name="govern_cer_a3">请输入手机或电话号码</string>
    <string name="mer_cer_q1">店铺名称</string>
    <string name="mer_cer_a1">请输入店铺名称</string>
    <string name="mer_cer_q2">店主姓名</string>
    <string name="mer_cer_a2">请输入姓名</string>
    <string name="mer_cer_q3">联系方式</string>
    <string name="mer_cer_a3">请输入手机或电话号码</string>
    <string name="cer_picture_upload">上传相关证件照片</string>

    <!--我的：入口-->
    <string name="activity_post">发布活动</string>
    <string name="problem_view">查看问题图片</string>
    <string name="solve_problem">解决问题</string>
    <string name="special_post">发布特色</string>
    <string name="edit_info">编辑信息</string>

    <!--发布活动-->
    <string name="activity_name">活动名称</string>
    <string name="activity_type">活动类型</string>
    <string name="activity_place">活动地点</string>
    <string name="activity_time">活动时长</string>
    <string name="activity_people_number">招募人数</string>
    <string name="activity_introduction">活动详情介绍</string>
    <string name="activity_point">活动完成所获积分</string>
    <string name="activity_picture">上传活动相关图片</string>

    <!--查看问题图片-->
    <string name="problem_picture">河湖问题图片</string>
    <string name="problem_reply">回复</string>
    <string name="problem_unresolved">待解决</string>
    <string name="problem_resolved">已解决</string>
    <string name="time">时间</string>
    <string name="distance">距离(km)</string>
    <string name="grades">当前所获积分</string>
    <string name="user_name">用户名</string>
    <string name="lake_realtime">实时河湖</string>
    <string name="merchant_coupon">%1$d元代金券</string>
    <string name="merchant_coupon_denomination">%1$d</string>
    <string name="ulq">问题上传</string>

</resources>
