<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F5F5"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tb_activity_post"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/toolbar"
        app:navigationIcon="@drawable/ic_nav_white_24dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/activity_post"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold" />
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_name_activity_post"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_name"
                android:textColor="#000000"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/et_name_activity_post"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:background="@drawable/background_single_line_edit_text"
                android:maxLines="1"
                android:padding="3dp"
                android:textColor="#000000"
                android:textSize="17sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/tv_name_activity_post"
                app:layout_constraintTop_toBottomOf="@id/tv_name_activity_post" />

            <ImageView
                android:id="@+id/iv_activity_post"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:layout_marginTop="10dp"
                android:scaleType="fitXY"
                android:src="@drawable/placeholder_pic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.50"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_name_activity_post" />


            <TextView
                android:id="@+id/tv_type_activity_post"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/activity_type"
                android:textSize="20sp"
                android:textColor="#000000"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_activity_post" />

            <EditText
                android:id="@+id/et_type_activity_post"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:background="@drawable/background_single_line_edit_text"
                android:maxLines="1"
                android:padding="3dp"
                android:textColor="#000000"
                android:textSize="17sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/tv_type_activity_post"
                app:layout_constraintTop_toBottomOf="@id/tv_type_activity_post" />


            <TextView
                android:id="@+id/tv_place_activity_post"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/activity_place"
                android:textColor="#000000"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_type_activity_post" />

            <EditText
                android:id="@+id/et_place_activity_post"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:background="@drawable/background_single_line_edit_text"
                android:maxLines="1"
                android:padding="3dp"
                android:textColor="#000000"
                android:textSize="17sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/tv_place_activity_post"
                app:layout_constraintTop_toBottomOf="@+id/tv_place_activity_post" />

            <TextView
                android:id="@+id/tv_time_activity_post"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/activity_time"
                android:textColor="#000000"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_place_activity_post" />

            <EditText
                android:id="@+id/et_time_activity_post"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:background="@drawable/background_single_line_edit_text"
                android:maxLines="1"
                android:padding="3dp"
                android:textColor="#000000"
                android:textSize="17sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/tv_time_activity_post"
                app:layout_constraintTop_toBottomOf="@+id/tv_time_activity_post" />

            <TextView
                android:id="@+id/tv_num_activity_post"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/activity_people_number"
                android:textColor="#000000"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_time_activity_post" />

            <EditText
                android:id="@+id/et_num_activity_post"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:background="@drawable/background_single_line_edit_text"
                android:maxLines="1"
                android:padding="3dp"
                android:textColor="#000000"
                android:textSize="17sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/tv_num_activity_post"
                app:layout_constraintTop_toBottomOf="@+id/tv_num_activity_post" />

            <TextView
                android:id="@+id/tv_intro_activity_post"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/activity_introduction"
                android:textColor="#000000"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_num_activity_post" />

            <EditText
                android:id="@+id/et_intro_activity_post"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:background="@drawable/background_single_line_edit_text"
                android:maxLines="1"
                android:padding="3dp"
                android:textColor="#000000"
                android:textSize="17sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/tv_intro_activity_post"
                app:layout_constraintTop_toBottomOf="@+id/tv_intro_activity_post" />

            <TextView
                android:id="@+id/tv_point_activity_post"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/activity_point"
                android:textColor="#000000"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_intro_activity_post" />

            <EditText
                android:id="@+id/et_point_activity_post"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:background="@drawable/background_single_line_edit_text"
                android:maxLines="1"
                android:padding="3dp"
                android:textColor="#000000"
                android:textSize="17sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/tv_point_activity_post"
                app:layout_constraintTop_toBottomOf="@+id/tv_point_activity_post" />

            <Button
                android:id="@+id/btn_activity_post"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@color/colorPrimaryDark"
                android:text="@string/activity_post"
                android:textColor="#ffffff"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_point_activity_post" />

            <TextView
                android:id="@+id/tv_activity_post"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:text="@string/activity_picture"
                android:textColor="#1C1C1C"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@+id/iv_activity_post"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/iv_activity_post" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


</LinearLayout>
