<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login"
    tools:context=".ui.login.login.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/corners_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.609">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="登       录"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/button"
            android:layout_width="60dp"
            android:layout_height="30dp"
            android:layout_marginStart="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/edittext_left"
            android:gravity="center"
            android:text="@string/account"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <EditText
            android:id="@+id/login_et_account"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_marginEnd="40dp"
            android:layout_marginRight="40dp"
            android:background="@drawable/edittext_style"
            android:inputType="textEmailAddress|number"
            app:layout_constraintBottom_toBottomOf="@+id/button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/button" />

        <TextView
            android:id="@+id/button2"
            android:layout_width="60dp"
            android:layout_height="30dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/edittext_left"
            android:gravity="center"
            android:text="@string/psw"
            android:textColor="@android:color/black"
            app:layout_constraintStart_toStartOf="@+id/button"
            app:layout_constraintTop_toBottomOf="@+id/button" />

        <EditText
            android:id="@+id/login_et_password"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:background="@drawable/edittext_style"
            android:inputType="textPassword"
            android:layout_marginEnd="40dp"
            android:layout_marginRight="40dp"
            app:layout_constraintBottom_toBottomOf="@+id/button2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/button2" />

        <Button
            android:id="@+id/login_bt"
            android:layout_width="80dp"
            android:layout_height="25dp"
            android:layout_marginTop="136dp"
            android:background="@android:color/white"
            android:text="@string/login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="20dp"
            android:background="@android:color/black"
            app:layout_constraintTop_toBottomOf="@+id/login_bt"
            tools:layout_editor_absoluteX="40dp" />

        <TextView
            android:id="@+id/login_tv_logup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="10dp"
            android:text="@string/logup"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.659"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/login_tv_forget_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget_password"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="@+id/login_tv_logup"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.205"
            app:layout_constraintStart_toEndOf="@+id/login_tv_logup"
            app:layout_constraintTop_toTopOf="@+id/login_tv_logup" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>