<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login"
    tools:context=".ui.login.logup.LogupActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/corners_bg"
        android:paddingBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.571"
        tools:layout_editor_absoluteX="24dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="注       册"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/button"
            android:layout_width="80dp"
            android:layout_height="30dp"
            android:layout_marginStart="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/edittext_left"
            android:clickable="false"
            android:gravity="center"
            android:text="@string/user_name"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <EditText
            android:id="@+id/logup_et_account"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_marginEnd="40dp"
            android:layout_marginRight="40dp"
            android:background="@drawable/edittext_style"
            android:inputType="textEmailAddress|number"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            app:layout_constraintBottom_toBottomOf="@+id/button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/button" />

        <TextView
            android:id="@+id/button2"
            android:layout_width="80dp"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edittext_left"
            android:gravity="center"
            android:text="@string/psw"
            android:textColor="@android:color/black"
            app:layout_constraintStart_toStartOf="@+id/button"
            app:layout_constraintTop_toBottomOf="@+id/button" />

        <EditText
            android:id="@+id/logup_et_password"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_marginEnd="40dp"
            android:layout_marginRight="40dp"
            android:background="@drawable/edittext_style"
            android:inputType="textPassword"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            app:layout_constraintBottom_toBottomOf="@+id/button2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/button2" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="80dp"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edittext_left"
            android:gravity="center"
            android:text="@string/confirm_pwd"
            android:textColor="@android:color/black"
            app:layout_constraintStart_toStartOf="@+id/button2"
            app:layout_constraintTop_toBottomOf="@+id/button2" />

        <EditText
            android:id="@+id/logup_et_confirm_pwd"
            android:layout_width="00dp"
            android:layout_height="30dp"
            android:layout_marginEnd="40dp"
            android:layout_marginRight="40dp"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:background="@drawable/edittext_style"
            android:inputType="textPassword"
            app:layout_constraintBottom_toBottomOf="@id/textView3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/textView3" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginBottom="10dp"
            android:text="@string/pwdquestion"
            android:textColor="@android:color/black"
            app:layout_constraintBottom_toTopOf="@+id/logup_spinner"
            app:layout_constraintStart_toStartOf="parent" />

        <Spinner
            android:id="@+id/logup_spinner"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginStart="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="40dp"
            android:layout_marginRight="40dp"
            android:autofillHints="（下拉菜单5个问题）"
            android:background="@drawable/spinner_bg"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            tools:layout_editor_absoluteX="40dp"
            tools:layout_editor_absoluteY="217dp" />

        <EditText
            android:id="@+id/logup_ed_answer"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginStart="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="40dp"
            android:layout_marginRight="40dp"
            android:background="@drawable/edittext_left_right"
            app:layout_constraintTop_toBottomOf="@id/logup_spinner" />

        <Button
            android:id="@+id/logup_bt"
            android:layout_width="80dp"
            android:layout_height="25dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/corners_green_bg"
            android:text="@string/logup"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/logup_ed_answer" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>